# reva

./: .env.example  .env.production.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  README.md  ROADMAP.md  conductor.json  docker-compose.build.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  technical-plan-v0.1.md  turbo.json
apps/api/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  coverage.xml  package.json  pyproject.toml  pyrightconfig.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260124_000000_001_initial_schema.py  20260124_120000_002_better_auth_migration.py  20260124_140000_003_multi_store_schema.py  20260124_162113_91c308d04d24_multi_store_schema_migration.py  20260126_181611_73487033ba80_add_token_count_to_knowledge_chunks.py  20260129_114716_002_better_auth_migration.py  20260202_112202_c14e723f42a1_add_content_hash_and_search_indexes.py  20260211_161301_eba077e6ae0e_add_order_inquiries_table.py  20260214_161828_a02a4cd25cdf_add_cart_recovery_tables.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: auth.py  config.py  database.py  deps.py  encryption.py  logging_config.py  rate_limit.py  security.py
apps/api/app/models/: __init__.py  abandoned_checkout.py  base.py  conversation.py  email_unsubscribe.py  integration.py  knowledge.py  message.py  order_inquiry.py  organization.py  product.py  recovery_event.py  recovery_sequence.py  store.py  user.py
apps/api/app/schemas/: __init__.py  analytics.py  chat.py  common.py  knowledge.py  order.py  recovery.py  search.py  shopify.py  store.py
apps/api/app/services/: analytics_service.py  chat_service.py  citation_service.py  email_service.py  embedding_service.py  knowledge_service.py  order_service.py  order_tools.py  (+8 more)
apps/api/scripts/: seed_recovery.py  sign_webhook.py
apps/api/tests/: __init__.py  conftest.py  test_analytics_route.py  test_analytics_service.py  test_auth.py  test_chat_route.py  test_chat_service.py  test_citation_service.py  test_conversations_route.py  test_embedding_service.py  test_embedding_task.py  test_encryption.py  test_graph.py  test_health.py  test_knowledge_route.py  test_knowledge_service.py  test_multi_tenancy.py  test_order_service.py  test_order_tools.py  test_orders_route.py  test_pdf_service.py  test_product_tools.py  test_products_route.py  test_recommendation_service.py  test_recovery.py  test_retrieval_service.py  test_search_service.py  test_shopify_client.py  test_shopify_oauth.py  test_shopify_tasks.py  test_shopify_webhooks.py  test_store_settings.py  test_stores_route.py  test_url_service.py
(+238 files in other folders)
